--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,7 @@ dependencies:
   get_it: ^7.1.2
   just_audio: ^0.9.5
   audio_service: ^0.18.0-beta.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^1.0.3
