--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   just_audio: ^0.9.5
   audio_service: ^0.18.0-beta.0
   shared_preferences: ^2.0.15
+  dio: ^4.0.6
+  path_provider: ^2.0.5
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_lints: ^1.0.3
