Now its working with the server

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:name="androidx.multidex.MultiDexApplication"
         android:label="flutter_audio_service_demo"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true" 
         android:requestLegacyExternalStorage="true">
         
-        <!-- android:usesCleartextTraffic="true"  -->
         <!-- android:usesCleartextTraffic="true" is used to permit the app to get mp3 files from http, without it its only https -->
         <activity
             android:name="com.ryanheise.audioservice.AudioServiceActivity"
